@@ -3,6 +3,9 @@ CHANGES IN VERSION 1.0.0
 
 BUG FIXES
 
+    o Fixed splitting sequence into smaller computational pieces. The end
+      of larger sequences was not searched properly.
+
     o Fixed handling of special IUPAC symbols (R, M, W, D, etc.). These are
       now cut off as N and - symbols.
 
